--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,620 @@
+:root {
+  --background-color: #aa2f1d;
+  --box-shadow-color: 30, 42, 58;
+  --toggle-bg: #fff;
+  --toggle-icon: #222;
+}
+
+.dark-theme {
+  --background-color: #1e2a3a;
+  --box-shadow-color: 245, 245, 245;
+  --toggle-bg: #00b7ff;
+  --toggle-icon: #fff;
+}
 .App {
+  height: 100vh;
+  /* background: #000; */
+}
+.player-score {
+  margin: auto;
+  max-width: 750px;
+  border-radius: 10px;
+  margin-top: 50px;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 25px;
+}
+
+.players {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.45);
+  backdrop-filter: blur(200px);
+  filter: blur();
+  border-radius: 10px;
+}
+
+.player-0,
+.player-1 {
+  flex: 1;
+  padding: 50px 20px;
+  text-align: center;
+  transition: all 0.75s;
+}
+
+.player-0 {
+  border-radius: 10px 0 0 10px;
+}
+
+.player-1 {
+  border-radius: 0 10px 10px 0;
+}
+
+.player-name {
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+
+#current-0,
+#current-1 {
+  color: #f34949;
+  font-size: 55px;
+  text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff,
+    -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+}
+
+.button-control {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  z-index: 5;
+}
+
+.roll-btn,
+.hold-btn,
+.reset-btn,
+.submit-btn {
+  margin-top: 20px;
+  padding: 10px 15px;
+  cursor: pointer;
+  border: none;
+  border-radius: 25px;
+  color: #000;
+  width: 120px;
+  margin: auto;
+  font-weight: 600;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  transition: all 0.1s ease;
+}
+
+.roll-btn:active,
+.hold-btn:active,
+.reset-btn:active,
+.submit-btn:active {
+  transform: translate(0, 2px);
+}
+
+.roll-btn {
+  width: 120px;
+  margin-top: 95px;
+}
+
+.svg-dice {
+  float: left;
+  fill: #c1b681;
+  font-size: 15px;
+}
+
+.hold-btn {
+  width: 90px;
+  margin-top: 20px;
+}
+
+.svg-hold {
+  float: left;
+  fill: #3251ff;
+  font-size: 15px;
+}
+
+.reset-btn {
+  width: 120px;
+  margin-top: 30px;
+}
+
+.svg-refresh {
+  fill: red;
+  font-size: 15px;
+  margin-right: 4px;
+  float: left;
+}
+
+.submit-btn {
+  background: #ff6e46;
+  color: #fff;
+  margin-top: 20px;
+}
+
+.random-box {
+  margin: auto;
+  width: 70px;
+  height: 70px;
+  text-align: center;
+  margin-top: 48px;
+}
+
+.random-number {
+  width: 70px;
+  height: 70px;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+
+.animated-dice {
+  width: 70px;
+  height: 70px;
+  font-size: 70px;
+  line-height: 61px;
+  border: none;
+}
+
+.winner-message {
+  position: absolute;
+  z-index: 12;
+  top: 70px;
+  left: 33%;
+  text-align: center;
+  margin: auto;
+  width: 32%;
+  margin-top: 48px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+  padding: 10px 2%;
+  border-radius: 0px;
+  background: #fff;
+  /* height: 50px; */
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+
+.dice-image {
+  width: 50px;
+  padding-top: 9px;
+}
+
+.player-0.active-toggle {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.player-1.active-toggle {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.winner-bg {
+  background: #000 !important;
+}
+
+.winner-bg .player-name {
+  color: #eff3f4;
+}
+
+.instruction {
+  margin: auto;
+  text-align: center;
+  color: #fff;
+}
+
+.instruction h2 {
+  font-size: 35px;
+  letter-spacing: 1px;
+  margin-bottom: 1px;
+  font-weight: 400;
+  margin-top: 0px;
+  padding-top: 40px;
+}
+
+.instruction p {
+  margin-top: 10px;
+}
+
+.hold-score {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.hold-score div {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.game-center-box {
+  height: 80px;
+  margin-top: 30px;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal {
+  position: absolute;
+  width: 40%;
+  margin-top: 80px;
+  left: 30%;
+  background: #fff;
+  border-radius: 10px;
+  z-index: 10;
+  padding-bottom: 15px;
+}
+
+.modal-trans-bg {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+  z-index: 9;
+  background: rgba(0, 0, 0, 0.9);
+}
+
+.box-spacing h2 {
+  text-align: center;
+  font-size: 26px;
+  color: #ff805a;
+  margin-bottom: 10px;
+}
+
+.box-spacing h3 {
+  text-align: center;
+  color: #333;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.player-details {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 25px;
+  gap: 5px;
+}
+
+.player-details label {
+  margin-top: 15px;
+}
+
+.player-details input {
+  padding: 13px 15px;
+  font-size: 15px;
+  border-radius: 25px;
+  background: #eff3f4;
+  border: none;
+}
+
+.modal a {
+  text-decoration: none;
+}
+
+.close-modal {
+  position: absolute;
+  fill: #f34949;
+  top: 10px;
+  right: 10px;
+  font-size: 27px;
+  cursor: pointer;
+}
+
+.alert {
+  color: #ff5c64;
+  font-size: 15px;
+  display: none;
+}
+
+.player-0-hold-score,
+.player-1-hold-score {
+  background: #f34949;
+  border: 1px solid #ffa3a3;
+  padding: 10px 5px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 100;
+  letter-spacing: 1px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  gap: 5px;
+  margin: auto;
+  max-width: 120px;
+  margin-top: 90px;
+}
+
+#hold-score-0,
+#hold-score-1 {
+  font-size: 25px;
+}
+
+.roll {
+  animation: 1s roll-dice 1;
+}
+
+@keyframes roll-dice {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(1500deg);
+  }
+}
+
+.players-attempt-1,
+.players-attempt-2 {
+  width: 160px;
+  height: 400px;
+  position: absolute;
+  border-radius: 10px;
+  padding: 10px;
+  top: 160px;
+  color: #fff;
+  background: #000;
+  text-align: center;
+}
+
+.players-attempt-1 {
+  left: 20px;
+}
+
+.players-attempt-2 {
+  right: 20px;
+}
+
+.players-attempt-1 h3,
+.players-attempt-2 h3 {
+  font-weight: normal;
+  margin-top: 0;
+}
+
+.disabled {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.theme-btn-ctn {
+  margin-bottom: 3rem;
+  width: 70px;
+  margin: auto;
+  margin-top: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.theme-btn {
+  opacity: 0;
+  position: absolute;
+}
+
+.theme-btn-label {
+  /* background-color: var(--background-color); */
+  background: var(--toggle-bg);
+  border-radius: 50px;
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: start;
+  padding: 0.7rem;
+  font-size: 1.3rem;
+  box-shadow: rgba(var(--box-shadow-color), 0.35) 0px 5px 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.theme-btn-label .check-tag {
+  background: var(--toggle-icon);
+  /* background-color: var(--primary-color); */
+  border-radius: 50%;
+  height: 15px;
+  width: 15px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+input[type="checkbox"]:checked + .theme-btn-label .check-tag {
+  transform: translateX(30px);
+}
+
+/* ========== FIREWORKS ========== */
+.fireworks > .before,
+.fireworks > .after {
+  border-radius: 50%;
+  box-shadow: 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff,
+    0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff;
+  height: 9px;
+  width: 9px;
+  animation: 1s bang ease-out infinite backwards,
+    1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -moz-animation: 1s bang ease-out infinite backwards,
+    1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -ms-animation: 1s bang ease-out infinite backwards,
+    1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -o-animation: 1s bang ease-out infinite backwards,
+    1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -webkit-animation: 1s bang ease-out infinite backwards,
+    1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  position: absolute;
+}
+
+.fireworks > .after {
+  animation-delay: 1.25s, 1.25s, 1.25s;
+  -moz-animation-delay: 1.25s, 1.25s, 1.25s;
+  -ms-animation-delay: 1.25s, 1.25s, 1.25s;
+  -o-animation-delay: 1.25s, 1.25s, 1.25s;
+  -webkit-animation-delay: 1.25s, 1.25s, 1.25s;
+  animation-duration: 1.25s, 1.25s, 6.25s;
+  -moz-animation-duration: 1.25s, 1.25s, 6.25s;
+  -ms-animation-duration: 1.25s, 1.25s, 6.25s;
+  -o-animation-duration: 1.25s, 1.25s, 6.25s;
+  -webkit-animation-duration: 1.25s, 1.25s, 6.25s;
+}
+
+@-webkit-keyframes bang {
   to {
-    transform: rotate(360deg);
+    box-shadow: -60px 8.3333333333px #f2ff00, 143px -268.6666666667px #ff9500,
+      -204px -2.6666666667px #ff00d5, -71px -165.6666666667px #d000ff,
+      238px -255.6666666667px #ff00c4, 135px -308.6666666667px #ff001e,
+      97px -35.6666666667px #ff7300, 205px -127.6666666667px #008cff,
+      55px -129.6666666667px #00ffe1, -231px -36.6666666667px #002bff,
+      -218px 74.3333333333px #2fff00, 207px -82.6666666667px #006fff,
+      -132px -402.6666666667px #0051ff, 60px -165.6666666667px #ff0077,
+      -170px -9.6666666667px #ff00e1, -29px -1.6666666667px #40ff00,
+      72px -44.6666666667px #ff0400, -201px -297.6666666667px #e600ff,
+      227px 65.3333333333px #b300ff, 71px -134.6666666667px #0011ff,
+      -79px -54.6666666667px #bb00ff, -100px -317.6666666667px #a2ff00,
+      20px -62.6666666667px #4400ff, 24px -124.6666666667px #ff0095,
+      30px -188.6666666667px #48ff00, 117px -176.6666666667px #ff6f00,
+      38px -23.6666666667px #a200ff, 31px -198.6666666667px #bfff00,
+      -64px -210.6666666667px #001aff, 53px -306.6666666667px #4dff00,
+      -162px 41.3333333333px darkorange, 196px 5.3333333333px #ff0066,
+      -92px -163.6666666667px #00ffcc, 151px -123.6666666667px #d5ff00,
+      -134px -405.6666666667px #1100ff, -16px -101.6666666667px #00b7ff,
+      -141px -109.6666666667px fuchsia, -131px 75.3333333333px #6a00ff,
+      249px 23.3333333333px #3c00ff, 250px -344.6666666667px #e6ff00,
+      -84px -220.6666666667px #1eff00, 127px 67.3333333333px #c8ff00,
+      193px -342.6666666667px #00ff44, -96px -11.6666666667px #fffb00,
+      -153px -303.6666666667px #ff001e, -61px -306.6666666667px #9500ff,
+      66px -73.6666666667px #f2ff00, 61px -28.6666666667px #0077ff,
+      143px -191.6666666667px #ff0080, -74px -114.6666666667px #0091ff,
+      -42px -412.6666666667px #002bff, 248px -110.6666666667px yellow,
+      47px -363.6666666667px #0099ff, 12px -95.6666666667px #00ff2b,
+      -50px -74.6666666667px #6600ff, -81px 66.3333333333px #ff00e1,
+      211px -203.6666666667px #00ffe6, -187px -155.6666666667px #3300ff,
+      218px 62.3333333333px #d5ff00, 243px -128.6666666667px #ff2200,
+      225px -147.6666666667px darkorange;
+  }
+}
+
+@keyframes bang {
+  to {
+    box-shadow: -60px 8.3333333333px #f2ff00, 143px -268.6666666667px #ff9500,
+      -204px -2.6666666667px #ff00d5, -71px -165.6666666667px #d000ff,
+      238px -255.6666666667px #ff00c4, 135px -308.6666666667px #ff001e,
+      97px -35.6666666667px #ff7300, 205px -127.6666666667px #008cff,
+      55px -129.6666666667px #00ffe1, -231px -36.6666666667px #002bff,
+      -218px 74.3333333333px #2fff00, 207px -82.6666666667px #006fff,
+      -132px -402.6666666667px #0051ff, 60px -165.6666666667px #ff0077,
+      -170px -9.6666666667px #ff00e1, -29px -1.6666666667px #40ff00,
+      72px -44.6666666667px #ff0400, -201px -297.6666666667px #e600ff,
+      227px 65.3333333333px #b300ff, 71px -134.6666666667px #0011ff,
+      -79px -54.6666666667px #bb00ff, -100px -317.6666666667px #a2ff00,
+      20px -62.6666666667px #4400ff, 24px -124.6666666667px #ff0095,
+      30px -188.6666666667px #48ff00, 117px -176.6666666667px #ff6f00,
+      38px -23.6666666667px #a200ff, 31px -198.6666666667px #bfff00,
+      -64px -210.6666666667px #001aff, 53px -306.6666666667px #4dff00,
+      -162px 41.3333333333px darkorange, 196px 5.3333333333px #ff0066,
+      -92px -163.6666666667px #00ffcc, 151px -123.6666666667px #d5ff00,
+      -134px -405.6666666667px #1100ff, -16px -101.6666666667px #00b7ff,
+      -141px -109.6666666667px fuchsia, -131px 75.3333333333px #6a00ff,
+      249px 23.3333333333px #3c00ff, 250px -344.6666666667px #e6ff00,
+      -84px -220.6666666667px #1eff00, 127px 67.3333333333px #c8ff00,
+      193px -342.6666666667px #00ff44, -96px -11.6666666667px #fffb00,
+      -153px -303.6666666667px #ff001e, -61px -306.6666666667px #9500ff,
+      66px -73.6666666667px #f2ff00, 61px -28.6666666667px #0077ff,
+      143px -191.6666666667px #ff0080, -74px -114.6666666667px #0091ff,
+      -42px -412.6666666667px #002bff, 248px -110.6666666667px yellow,
+      47px -363.6666666667px #0099ff, 12px -95.6666666667px #00ff2b,
+      -50px -74.6666666667px #6600ff, -81px 66.3333333333px #ff00e1,
+      211px -203.6666666667px #00ffe6, -187px -155.6666666667px #3300ff,
+      218px 62.3333333333px #d5ff00, 243px -128.6666666667px #ff2200,
+      225px -147.6666666667px darkorange;
+  }
+}
+
+@-webkit-keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+
+@keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes position {
+  0%,
+  19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+
+  20%,
+  39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+
+  40%,
+  59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+
+  60%,
+  79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+
+  80%,
+  99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
+
+@keyframes position {
+  0%,
+  19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+
+  20%,
+  39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+
+  40%,
+  59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+
+  60%,
+  79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+
+  80%,
+  99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
   }
 }
